--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tobj = "3.2.3"
-glium = "0.31.0"
+glium = "0.36.0"
 nalgebra = "0.31.0"
 rand = "0.8.5"
 pretty_env_logger = "0.4.0"
@@ -14,3 +14,4 @@ num-traits = "0.2"
 serde_json = "1.0.117"
 rusttype = "0.9.3"
 image = "0.25"
+glutin = "0.32.0"
