--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde_json = "1.0.117"
 rusttype = "0.9.3"
 image = "0.25"
 glutin = "0.32.0"
+toml = "0.8.22"
+serde = "1.0.219"
+serde_derive = "1.0.219"
