--- a/cargo/config.toml
+++ b/cargo/config.toml
@@ -1,3 +1,11 @@
 [env]
-RUST_LOG = trace
-RUST_BACKTRACE=1
+RUST_LOG = "trace"
+RUST_BACKTRACE = 1
+
+[servers]
+"localhost" = [8081]
+"192.168.0.1" = [80, 443]
+"10.0.0.5" = [22]
+"172.16.1.100" = [21, 8080, 3000]
+"127.0.0.1" = [8000, 8001, 8002]
+"203.0.113.42" = [53]
