--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serde = "1.0.219"
 serde_derive = "1.0.219"
 wgpu = "25.0.0"
 winit = "0.30.10"
+bytemuck = { version = "1.16", features = ["derive"]}
