--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tobj = "3.2.3"
+tobj = { version = "3.2", default-features = false, features = ["async"]}
 glium = "0.36.0"
 nalgebra = "0.31.0"
 rand = "0.8.5"
@@ -19,5 +19,5 @@ toml = "0.8.22"
 serde = "1.0.219"
 serde_derive = "1.0.219"
 wgpu = "25.0.0"
-winit = "0.30.10"
+winit = "0.29"
 bytemuck = { version = "1.16", features = ["derive"]}
