--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ serde_derive = "1.0.219"
 wgpu = "25.0.0"
 winit = "0.29"
 bytemuck = { version = "1.16", features = ["derive"]}
+cgmath = "0.18.0"
