--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 tobj = "3.2.3"
-glium = "0.36.0"
 nalgebra = "0.31.0"
 rand = "0.8.5"
 pretty_env_logger = "0.4.0"
@@ -18,3 +17,5 @@ glutin = "0.32.0"
 toml = "0.8.22"
 serde = "1.0.219"
 serde_derive = "1.0.219"
+winit = "0.29"
+wgpu = "25.0.2"
