--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,5 @@ bytemuck = { version = "1.16", features = ["derive"]}
 cgmath = "0.18.0"
 anyhow = "1.0"
 pollster = "0.4.0"
-hdf5 = "0.8.1"
 ndarray = "0.15"
-
-[patch.crates-io]
-hdf5 = { path = "./hdf5-rust/hdf5" }
-hdf5-sys = { path = "./hdf5-rust/hdf5-sys" }
+hdf5 = {package = "hdf5-metno", version = "0.10.0", features = ["static"]}
